--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "test": "jest",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
+    "storybook": "npm run test:generate-output && storybook dev -p 6006",
+    "build-storybook": "npm run test:generate-output && storybook build"
   },
   "keywords": [],
   "author": "",
@@ -27,11 +28,18 @@
     "@storybook/addon-docs": "^9.1.10",
     "@storybook/addon-vitest": "^9.1.10",
     "@storybook/react-vite": "^9.1.10",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "path-browserify": "^1.0.1",
     "playwright": "^1.56.0",
     "postcss": "^8.5.6",
     "rollup": "^4.52.4",
@@ -39,11 +47,15 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "storybook": "^9.1.10",
     "tailwindcss": "^3.4.18",
+    "ts-jest": "^29.4.5",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   },
   "peerDependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
+  },
+  "dependencies": {
+    "@storybook/addon-jest": "^9.1.10"
   }
 }
