--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["jest", "@testing-library/jest-dom"]
+    "types": ["jest", "@testing-library/jest-dom"],
+    "declaration": true,
+    "declarationDir": "dist",
+    "outDir": "dist",
   },
   "include": ["src", "jest.setup.ts"]
 }
+
