Added ability to publish (#2)
* added config to be able to publish locally

* added type to export

* added npmrc and changed react version

* 0.1.1

* added readme

* fixed readme

* changed to module

* changed export type

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,18 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx", // or "react" for older React versions
-    "module": "commonjs",
+    "module": "ESNext",
     "target": "ES6",
     "esModuleInterop": true,
     "moduleResolution": "node",
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["jest", "@testing-library/jest-dom"]
+    "types": ["jest", "@testing-library/jest-dom"],
+    "declaration": true,
+    "declarationDir": "dist",
+    "outDir": "dist",
   },
   "include": ["src", "jest.setup.ts"]
 }
+
