--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@danwilson282/mkj-component-library",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -23,7 +23,7 @@
     "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
     "storybook": "npm run test:generate-output && storybook dev -p 6006",
     "build-storybook": "npm run test:generate-output && storybook build",
-    "deploy-storybook": "gh-pages -d storybook-static -b gh-pages -f"
+    "deploy-storybook": "gh-pages -d storybook-static -b gh-pages"
   },
   "homepage": "https://danwilson282.github.io/mkj-component-library",
   "keywords": [],
@@ -32,6 +32,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
+    "@heroui/react": "^2.8.5",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.2",
@@ -48,6 +49,7 @@
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.23.24",
     "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
