--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@storybook/addon-a11y": "^9.1.10",
     "@storybook/addon-docs": "^9.1.10",
     "@storybook/addon-vitest": "^9.1.10",
+    "@storybook/jest": "^0.2.2",
     "@storybook/react-vite": "^9.1.10",
+    "@storybook/testing-library": "^0.2.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
