--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "playwright": "^1.56.0",
     "postcss": "^8.5.6",
     "react-docgen-typescript": "^2.4.0",
+    "react-icons": "^5.5.0",
     "rollup": "^4.52.4",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.36.0",
