--- a/package.json
+++ b/package.json
@@ -72,7 +72,11 @@
   },
   "peerDependencies": {
     "react": "^19",
-    "react-dom": "^19"
+    "react-dom": "^19",
+    "@heroui/react": "^2.8.5",
+    "@portabletext/react": "^4.0.3",
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^3.4.18"
   },
   "dependencies": {
     "@storybook/addon-jest": "^9.1.10"
