--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@heroui/react": "^2.8.5",
     "@portabletext/react": "^4.0.3",
     "react-icons": "^5.5.0",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "*"
   },
   "dependencies": {
     "@storybook/addon-jest": "^9.1.10"
