--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
     "@heroui/react": "^2.8.5",
