--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@danwilson282/mkj-component-library",
   "version": "0.1.11",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "exports": {
